fix(core): allow overflow on details panel for menus (#4850)

--- a/app/scripts/modules/core/src/insight/insight.less
+++ b/app/scripts/modules/core/src/insight/insight.less
@@ -7,6 +7,7 @@ insight-layout {
     overflow-x: hidden;
 
     .content {
+      overflow-x: hidden;
       overflow-y: auto;
     }
   }
